--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
             </div>
             <div class="skills">
                 <div class="skill-category">
-                    <strong>Developer Tools:</strong><br> Git<br> Postman API<br> CI/CD<br> VS Code<br> Quartus Prime<br> Eclipse
+                    <strong>Developer Tools:</strong><br> Git<br> CI/CD<br> Postman API<br> VS Code<br> Quartus Prime<br> Eclipse
                 </div>
             </div>
         </div>
     </section>
-
+                                                                                                                                                                                                                                                                                  
     <section id="Projects" class="inverse-section">
         <div class="container">
             <h2>Projects</h2>
