--- a/index.html
+++ b/index.html
@@ -96,14 +96,19 @@
 
     <section id="Contact" class="box">
         <div class="container contact-container">
+            <div class="border"></div> <!-- Static border around the contact section -->
             <h2>Contact</h2>
             <ul class="contact">
-                <li><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/evan-shiber/">LinkedIn</a></li>
-                <li><i class="fa-solid fa-envelope"></i> <a href="mailto:shiberevan@gmail.com">shiberevan@gmail.com</a></li>
+                <li><i class="fa-brands fa-linkedin"></i> 
+                    <a href="https://www.linkedin.com/in/evan-shiber/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                </li>
+                <li><i class="fa-solid fa-envelope"></i> 
+                    <a href="mailto:shiberevan@gmail.com" target="_blank" rel="noopener noreferrer">shiberevan@gmail.com</a>
+                </li>
                 <li><i class="fa-solid fa-phone"></i> 201-937-5702</li>
             </ul>
         </div>
-    </section>
+    </section>       
     
     <script src="script.js"></script>
     
